syntax = "proto3";
import "google/protobuf/any.proto";
option go_package = "github.com/junereycasuga/gokit-grpc-demo/pb";


service MathService {
  rpc Add(MathRequest) returns (MathResponse) {}
  rpc Subtract(MathRequest) returns (MathResponse) {}
  rpc Multiply(MathRequest) returns (MathResponse) {}
  rpc Divide(MathRequest) returns (MathResponse) {}
  rpc Cda(MathRequest) returns (OtherResponse) {}
}

message MathRequest {
  float numA = 1;
  float numB = 2;
}

message MathResponse {
  float result = 1;
}

message OtherRequest {
  float numA = 1;
}

message OtherResponse {
  repeated DataDb Data = 1;
}

message DataDb{
  string Id = 1;
  string Offer_id =2;
  string Quote_id = 3;
}